<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">tento-login</string>
    <string name="action_settings">Settings</string>
    <string name="Join">Join</string>
    <string name="SignIn">Sign In</string>
    <string name="loginInformation">Please enter email/password</string>
    <string name="email">E-mail :  </string>
    <string name="password">Password : </string>
    <string name="JoinEmail">Email : </string>
    <string name="JoinPassword">Password : </string>
    <string name="ConfirmPassword">Confirm Password : </string>
    <string name="JoinbtnOkay">Okay</string>
    <string name="JoinbtnCancle">Cancle</string>
    <string name="JoinInformation">Join Tento</string>
    <string name="title_activity_playing">PlayingActivity</string>
    <string name="button_pause">Pause</string>
    <string name="repeat_once">한곡 반복</string>
    <string name="random_play">무작위 재생</string>
    <string name="repeat_all">전곡 반복</string>
    <string name="title_activity_tento_fragement">TentoFragementActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>
