<?xml version="1.0" encoding="utf-8"?>


<com.sothree.slidinguppanel.SlidingUpPanelLayout xmlns:sothree="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutSlide"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="bottom"
    sothree:panelHeight="0dp"
    sothree:shadowHeight="0dp"
    android:background="#FFFFFF"
    android:clickable="false">


<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="2">

            <ImageView
                android:id="@+id/imgAlbumArt"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_launcher" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="8">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_below="@id/imgAlbumArt"
                android:layout_weight="3"
                android:textSize="18dp"
                android:singleLine="false"
                android:text="NoSong"
                android:textStyle="bold"
                 />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="4">

                <CheckBox
                    android:id="@+id/checkboxRepeatAll"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/repeat_all"
                    android:checked="true"
                    android:layout_weight="8"
                    android:textSize="15dp" />

                <CheckBox
                    android:id="@+id/checkboxRandom"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/random_play"
                    android:layout_weight="8"
                    android:textSize="15dp" />

                <CheckBox
                    android:id="@+id/checkboxRepeat"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/repeat_once"
                    android:layout_weight="8"
                    android:textSize="15dp" />

            </LinearLayout>

            <SeekBar
                    android:id="@+id/seekbarSong"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="3" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/btnBackPlaying"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Back" />

        <ListView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/listViewPlaying"
            android:headerDividersEnabled="false" />
    </LinearLayout>
</com.sothree.slidinguppanel.SlidingUpPanelLayout>